--- a/loop_fusion/package.xml
+++ b/loop_fusion/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>loop_fusion package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="tony-ws@todo.todo">tony-ws</maintainer>
@@ -41,7 +41,10 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>camera_models</build_depend>
+  <build_depend>vins_msgs</build_depend>
+
   <run_depend>camera_models</run_depend>
+  <run_depend>vins_msgs</run_depend>
 
 
 
