--- a/vins_estimator/package.xml
+++ b/vins_estimator/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The vins package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="qintonguav@gmail.com">qintong</maintainer>
@@ -43,10 +43,12 @@
   <build_depend>roscpp</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>camera_models</build_depend>
+  <build_depend>vins_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>camera_models</run_depend>
+  <run_depend>vins_msgs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
