--- a/camera_models/CMakeLists.txt
+++ b/camera_models/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_FLAGS "-std=c++11")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fPIC")
 
 find_package(catkin REQUIRED COMPONENTS
+    ceres_catkin
     roscpp
     std_msgs
     )
@@ -13,7 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
 find_package(Boost REQUIRED COMPONENTS filesystem program_options system)
 include_directories(${Boost_INCLUDE_DIRS})
 
-find_package(OpenCV REQUIRED)
+find_package(OpenCV 3 REQUIRED)
 
 # set(EIGEN_INCLUDE_DIR "/usr/local/include/eigen3")
 find_package(Ceres REQUIRED)
@@ -23,7 +24,7 @@ include_directories(${CERES_INCLUDE_DIRS})
 catkin_package(
     INCLUDE_DIRS include
     LIBRARIES camera_models
-    CATKIN_DEPENDS roscpp std_msgs
+    CATKIN_DEPENDS ceres_catkin roscpp std_msgs
 #    DEPENDS system_lib
     )
 
@@ -33,7 +34,7 @@ include_directories(
 
 include_directories("include")
 
-add_executable(Calibrations 
+add_executable(Calibrations
     src/intrinsic_calib.cc
     src/chessboard/Chessboard.cc
     src/calib/CameraCalibration.cc
