--- a/vins_estimator/package.xml
+++ b/vins_estimator/package.xml
@@ -40,14 +40,17 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>image_transport</build_depend>
+
   <build_depend>camera_models</build_depend>
+  <build_depend>ceres_catkin</build_depend>
+  <build_depend>image_transport</build_depend>
+  <build_depend>roscpp</build_depend>
   <build_depend>vins_msgs</build_depend>
 
-  <run_depend>roscpp</run_depend>
-  <run_depend>image_transport</run_depend>
   <run_depend>camera_models</run_depend>
+  <run_depend>ceres_catkin</run_depend>
+  <run_depend>image_transport</run_depend>
+  <run_depend>roscpp</run_depend>
   <run_depend>vins_msgs</run_depend>
 
 
