--- a/vins_msgs/package.xml
+++ b/vins_msgs/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
   <name>vins_msgs</name>
-  <version>0.1</version>
-  <description>Additonal message(s) to connect VINS fusion wit COVINS</description>
+  <version>0.0.1</version>
+  <description>Additonal message(s) to e.g. connect estimator with loop_fusion</description>
 
    <maintainer email="zieglert@ethz.ch">Thomas Ziegler</maintainer>
 
