--- a/loop_fusion/package.xml
+++ b/loop_fusion/package.xml
@@ -43,10 +43,12 @@
 
   <build_depend>camera_models</build_depend>
   <build_depend>ceres_catkin</build_depend>
+  <build_depend>covins_comm</build_depend>
   <build_depend>vins_msgs</build_depend>
 
   <run_depend>camera_models</run_depend>
   <run_depend>ceres_catkin</run_depend>
+  <run_depend>covins_comm</run_depend>
   <run_depend>vins_msgs</run_depend>
 
 
