--- a/config/pegasus/pegasus_stereo_imu.yaml
+++ b/config/pegasus/pegasus_stereo_imu.yaml
@@ -9,8 +9,8 @@ image0_topic: "/pegasus/cam0/image_raw"
 image1_topic: "/pegasus/cam1/image_raw"
 output_path: "/home/yves/Documents/Data/"
 
-cam0_calib: "neo_cam_0.yaml"
-cam1_calib: "neo_cam_1.yaml"
+cam0_calib: "23026_cam_0.yaml"
+cam1_calib: "23026_cam_1.yaml"
 image_width: 752
 image_height: 480
 
@@ -29,9 +29,9 @@ body_T_cam0: !!opencv-matrix
 #          -1, 0, 0, 0.055,
 #          0, -1, 0, 0.0065,
 #          0, 0, 0, 1]
-   data: [0.9999949463669013, 0.0025381792428195754, 0.0019143894037612023, -0.03948765512484276,
-          -0.0025395649002026275, 0.9999965148530137, 0.0007217284418940898, 0.014816317776519324,
-          -0.0019125508556825732, -0.0007265865106784595, 0.9999979071084433, 0.003980141583944678,
+   data: [0.9999958649481703, 0.002753460541627872, 0.0008297840722003311, -0.0364931613814093,
+          -0.0027557317979724104, 0.9999924256326489, 0.0027485668245068456, 0.007930758410019998,
+          -0.0008222097168136392, -0.002750842121393782, 0.9999958784109086, -0.00022665266974171913,
           0, 0, 0, 1]
 
 #	R: 	 0, -sin(pitch),  cos(pitch)
@@ -47,10 +47,13 @@ body_T_cam1: !!opencv-matrix
 #          -1, 0, 0, -0.055,
 #          0, -1, 0, 0.0065,
 #          0, 0, 0, 1]
-   data: [0.9999761813246912, 0.004609375281106548, -0.005137162914129585, 0.07042515941002853,
-          -0.004587229215920821, 0.9999801713149754, 0.004314429857269417, 0.015224678012900712,
-          0.005156947877280407, -0.004290761749458864, 0.9999774973729162, 0.0046649713170978085,
+   data: [0.9999805896565428, 0.004883247690398199, -0.003869651424535456, 0.07342806744613586,
+          -0.004867340311783546, 0.9999797098299329, 0.004109613939611598, 0.007872106731060325,
+          0.003889641171428988, -0.004090699260222361, 0.9999840683086507, 0.0002530722009148248,
           0, 0, 0, 1]
+
+#Invert transforms: 0 use as given, 1 invert
+invert: 1
 
 #Multiple thread support
 multiple_thread: 1
@@ -64,7 +67,7 @@ show_track: 1           # publish tracking image as topic
 flow_back: 1            # perform forward and backward optical flow to improve feature tracking accuracy
 
 #optimization parameters
-max_solver_time: 0.025  # max solver itration time (ms), to guarantee real time
+max_solver_time: 0.035  # max solver itration time (ms), to guarantee real time
 max_num_iterations: 8   # max solver itrations, to guarantee real time
 keyframe_parallax: 10.0 # keyframe selection threshold (pixel)
 
@@ -77,7 +80,7 @@ g_norm: 9.81007     # gravity magnitude
 
 #unsynchronization parameters
 estimate_td: 0                      # online estimate time offset between camera and imu
-td: 0.0                             # initial value of time offset. unit: s. readed image clock + td = real image clock (IMU clock)
+td: 0.0010984817601322951           # initial value of time offset. unit: s. readed image clock + td = real image clock (IMU clock)
 
 #visualization parameters
 save_image: 0                   # save image in pose graph for visualization prupose; you can close this function by setting 0 
